# orionbelt-semantic-layer-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  server.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  docker-publish.yml  release.yml
docs/integrations/: crewai.md  google-adk.md  langchain.md  n8n.md  openai-agents-sdk.md
scripts/: release.sh  setup-hooks.sh
tests/: conftest.py  test_server.py
tests/cloudrun/: test_mcp_cloudrun.sh
